# x64-mm

./: .gitmodules  CMakeLists.txt  benchmark.cc  benchmark_openblas.cc  gemm.cc  gemm.h  main.cc  utils.h
